--- a/themes/default.theme/styles.scss
+++ b/themes/default.theme/styles.scss
@@ -10,15 +10,15 @@
 $colors: (
   'primary': #5ad485,
   'background': #e1e1e1,
+  'menu-background': #e6e6e6,
   'gray': #999,
   'border': #ccc
 );
 
-$border-width: 0.3rem;
+$border-width: 0.1rem;
 
-html{ font-size: 125%; }
 $base-font-size: 1rem;
-$base-line-height: 1.25 * $base-font-size;
+$base-line-height: 1.125 * $base-font-size;
 
 $type-settings: (
   -1: (
@@ -85,9 +85,11 @@ div {
   position: relative;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 html, body {
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -105,11 +107,13 @@ body {
   .menu > .name {
       @extend %serif-font;
       @include type-setting(2);
+      text-align: center;
     }
   .menu {
     padding: $base-line-height - $border-width;
-    margin-bottom: $base-line-height;
     border: $border-width solid menus-color('border');
+    margin-bottom: $base-line-height;
+    background-color: menus-color('menu-background');
 
     .section > .name {
         @extend %serif-font;
@@ -167,12 +171,8 @@ body {
     height: 100%;
     opacity: 0;
     z-index: 2;
-    opacity: 0;
-    transition: opacity 0.5s ease-out;
-    
-    &:hover {
-      opacity: 1;
-    }
+    pointer-events: none;
+    opacity: 0.25;
   }
   
   .guide {
@@ -181,7 +181,7 @@ body {
     &, &:before, &:after {    
       height: $base-line-height;
       width: 100%;
-      outline: 1px solid grey;
+      outline: 1px dashed grey;
     }
     
     &:before, &:after {
@@ -197,7 +197,74 @@ body {
   }
 }
 
-@media only screen and (min-width: 600px) {
+nav {
+  white-space: nowrap;
+  display: flex;
+  @extend %serif-font;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  height: $base-line-height * 3;
+  margin-left: -$base-line-height;
+  margin-right: -$base-line-height;
+  border-top: $border-width solid menus-color('border');
+  padding-top: $base-line-height - ($border-width * 2);
+  border-bottom: $border-width solid menus-color('border');
+  @include type-setting(0);
+  overflow: auto;
+  margin-bottom: $base-line-height;
+  background-color: menus-color('background');
+
+  ul {
+    flex-wrap: nowrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    li {
+      display: inline;
+      list-style-type: none;
+      padding-left: $base-line-height;
+      a:link {
+        text-decoration: none;
+      }
+      a.current {
+        background-color: menus-color('border');
+      }
+      a, a:visited, a:hover, a:active {
+        color: inherit;
+      }
+    }
+  }
+
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+nav::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+nav {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+header {
+  @include type-setting(2);
+  width: 100%;
+  text-align: center;
+}
+
+.menu {
+  a.anchor {
+    display: block;
+    position: relative;
+    top: - ($base-line-height * 5);
+  }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 767px),
+  only screen and (min-width: 1024px) {
   .items {
     display: flex;
     flex-wrap: wrap;
@@ -209,6 +276,47 @@ body {
     }
     .item:nth-child(odd) {
       padding-right: 1.5 * $base-line-height;
+    }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .menu-driver {
+    display: flex;
+    align-items: flex-start;
+    
+    nav {
+      min-width: 30%;
+      top: 0;
+      height: 100%;
+      white-space: unset;
+      padding-top: $base-line-height;
+      padding-right: $base-line-height;
+      border-top: unset;
+      border-bottom: unset;
+      margin-left: 0;
+      margin-right: 0;
+
+      ul {
+        li {
+          display: list-item;
+          @include type-setting(-1);
+          padding-left: 0;
+          padding-bottom: $base-line-height / 2;
+        }
+      }
+    }
+  }
+  .menu {
+    a.anchor {
+      top: - ($base-line-height * 2);
+    }
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .menu-driver {
+    nav {
+      min-width: 20%;
     }
   }
 }
