--- a/themes/standard.theme/layout.scss
+++ b/themes/standard.theme/layout.scss
@@ -30,7 +30,7 @@
   margin: 1 * $base-line-height 0;
 }
 
-div {
+div, header {
   @include type-setting(0);
   margin: 0 0 $base-line-height 0;
 }
@@ -95,6 +95,7 @@ body {
           }
           .description {
             @include type-setting(-1);
+            margin-right: - $base-line-height;
           }
         }
         .choices {
@@ -127,7 +128,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
-    z-index: 2;
+    z-index: 3;
     pointer-events: none;
     opacity: 0.25;
   }
@@ -138,7 +139,7 @@ body {
     &, &:before, &:after {    
       height: $base-line-height;
       width: 100%;
-      outline: 1px dashed grey;
+      outline: 3px dashed grey;
     }
     
     &:before, &:after {
