--- a/themes/standard.theme/brand.scss
+++ b/themes/standard.theme/brand.scss
@@ -4,6 +4,7 @@ $brand-background-color: #e1e1e1;
 $menu-color: #000033;
 $menu-background-color: #e6e6e6;
 $border-color: #CCC;
+$borer-width: 0.05rem;
 
 body {
   --brand-color: #{$brand-color};
@@ -11,6 +12,7 @@ body {
   --menu-color: #{$menu-color};
   --menu-background-color: #{$menu-background-color};
   --border-color: #{$border-color};
+  --border-width: #{$border-width};
   color: var(--brand-color);
   background-color: var(--brand-background-color);
 }
@@ -24,7 +26,7 @@ body {
   nav {
     background-color: var(--brand-background-color);
     border-color: var(--border-color);
-  
+
     ul {
       li {
         a.current {
