--- a/themes/standard.theme/brand.scss
+++ b/themes/standard.theme/brand.scss
@@ -1,10 +1,11 @@
 /* Anything that will be toggled for dark mode needs its own name. */
 $brand-color: #000033;
+$brand-secondary-color: #000033;
 $brand-background-color: #e1e1e1;
 $menu-color: #000033;
 $menu-background-color: #e6e6e6;
 $border-color: #CCC;
-$borer-width: 0.05rem;
+$border-width: 0.05rem;
 
 body {
   --brand-color: #{$brand-color};
@@ -36,7 +37,20 @@ body {
           color: inherit;
         }
       }
+      // The category navigation puts the 'current' class on the <li> instead of the
+      // <a> within it.  TODO: Make that more consistent and DRY these styles.
+      li.current {
+        a, a:visited {
+          background-color: var(--border-color);
+        }
+      }
     }
 
+    .scroll-thumb {
+      svg {
+        fill: var(--brand-background-color);
+      }
+    }
   }
+
 }
