--- a/themes/standard.theme/reset.scss
+++ b/themes/standard.theme/reset.scss
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body, h1, h2, h3, h4, h5, h6, p, ol, ul, header {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -18,6 +18,7 @@ ol, ul {
 }
 
 img {
-  max-width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   height: auto;
 }
